--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <body class="page">
     <header class="header decorated-zone">
       <nav class="header__theme-menu">
-        <span class="header__rec" aria-hidden="true"></span>
         <span class="header__decor" aria-hidden="true"></span>
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -56,6 +55,7 @@
 
       <section class="content__section">
         <h2 class="content__section-title">Почему сосредоточиться так сложно</h2>
+
         <ul class="content__section-list">
           <li class="content__section-list-item">
             <h3 class="card__title title-decor">Многозадачность</h3>
@@ -65,6 +65,7 @@
                поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». 
                Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
           </li>
+
           <li class="content__section-list-item">
             <h3 class="card__title title-decor">Дофамин</h3>
             <p class="card__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться 
@@ -73,15 +74,14 @@
               В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем 
               больше удовольствия получаешь.</p>
           </li>
-
         </ul>
       </section>
 
-      <section class="content__section-lots">
-        <h2 class="content__section-title lots__title">Что снижает концентрацию внимания?</h2>
-        <ul class="content__section-lots-list">
+      <section class="content__section">
+        <h2 class="content__section-title">Что снижает концентрацию внимания?</h2>
+        <ul class="content__section-list content__section-list-lots">
 
-          <li class="content__section-lots-list-item">
+          <li class="content__section-list-item">
             <h3 class="card__title title-decor">Многозадачность</h3>
             <p class="card__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация 
               (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет 
@@ -89,7 +89,7 @@
               и она может не выдержать, если не давать ей отдохнуть.</p>
           </li>
 
-          <li class="content__section-lots-list-item">
+          <li class="content__section-list-item">
             <h3 class="card__title title-decor">Еда</h3>
             <p class="card__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию 
               и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем 
@@ -97,7 +97,7 @@
               сонливость. И хотим ещё больше быстрых углеводов.</p>
           </li>
 
-          <li class="content__section-lots-list-item">
+          <li class="content__section-list-item">
             <h3 class="card__title title-decor">Гаджеты</h3>
             <p class="card__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, 
               а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной 
@@ -109,13 +109,13 @@
         </ul>
       </section>
 
-      <section class="content__section-advice">
-        <h2 class="content__section-title advice__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <div class="content__section-advice-block">
+      <section class="content__section">
+        <h2 class="content__section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <div class="content__section-block">
           <h3 class="card__title title-decor">5 простых (на самом деле не очень) советов</h3>
-          <ul class="content__section-advice-list">
+          <ul class="content__section-list content__section-list-advice">
             
-            <li class="content__section-advice-list-item">
+            <li class="content__section-list-item">
               <h4 class="card__title title-decor card__title-advice">Представьте небо и облака</h4>
               <p class="card__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
                 Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. 
@@ -124,14 +124,14 @@
                 Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
             </li>
 
-            <li class="content__section-advice-list-item">
+            <li class="content__section-list-item">
               <h4 class="card__title title-decor card__title-advice">Включите музыку</h4>
               <p class="card__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, 
                 которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать 
                 включить плейлист в «белым шумом» или нейромузыкой.</p>
             </li>
 
-            <li class="content__section-advice-list-item">
+            <li class="content__section-list-item">
               <h4 class="card__title title-decor card__title-advice">Прогуляйтесь</h4>
               <p class="card__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="text__link" href="#">показал</a>, 
                 что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. 
@@ -139,14 +139,14 @@
                 лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
             </li>
 
-            <li class="content__section-advice-list-item">
+            <li class="content__section-list-item">
               <h4 class="card__title title-decor card__title-advice">Хорошо ешьте</h4>
               <p class="card__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют 
                 резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), 
                 коричневый рис, хлеб из цельнозерновой пшеницы.</p>
             </li>
 
-            <li class="content__section-advice-list-item">
+            <li class="content__section-list-item">
               <h4 class="card__title title-decor card__title-advice">Читайте</h4>
               <p class="card__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, 
                 достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто 
@@ -160,11 +160,11 @@
       <section class="gallery">
         <h2 class="card__title title-decor">А можно в картинках?</h2>
         <div class="gallery__container">
-          <img loading="lazy" src="./images/sunset.png" class="sunset__img" alt="Закат на море">
-          <img loading="lazy" src="./images/ice-cream.png" class="ice-cream__img" alt="Шарики мороженного в тарелке">
-          <img loading="lazy" src="./images/tape.png" class="tape__img" alt="Музыкальная кассета">
-          <img loading="lazy" src="./images/books.png" class="book__img" alt="Стопка книг">
-          <img loading="lazy" src="./images/street.png" class="street__img" alt="Улица с домами">
+          <img loading="lazy" src="./images/sunset.png" class="sunset__img gallery__container-img" alt="Закат на море">
+          <img loading="lazy" src="./images/ice-cream.png" class="ice-cream__img gallery__container-img" alt="Шарики мороженного в тарелке">
+          <img loading="lazy" src="./images/tape.png" class="tape__img gallery__container-img" alt="Музыкальная кассета">
+          <img loading="lazy" src="./images/books.png" class="book__img gallery__container-img" alt="Стопка книг">
+          <img loading="lazy" src="./images/street.png" class="street__img gallery__container-img" alt="Улица с домами">
         </div>
       </section>
 
